--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.1",
-    "@neondatabase/serverless": "^0.9.0",
-    "@prisma/adapter-neon": "^5.13.0",
+    "@neondatabase/serverless": "^0.9.5",
+    "@prisma/adapter-neon": "^5.22.0",
     "@prisma/client": "^5.13.0",
     "@reduxjs/toolkit": "^2.8.2",
     "date-fns": "^4.1.0",
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/ws": "^8.18.1",
+    "bufferutil": "^4.0.9",
     "tailwindcss": "^4"
   }
 }
