--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.1",
+    "@imagekit/nodejs": "^7.1.1",
     "@neondatabase/serverless": "^0.9.5",
     "@prisma/adapter-neon": "^5.22.0",
     "@prisma/client": "^5.13.0",
     "@reduxjs/toolkit": "^2.8.2",
+    "axios": "^1.13.2",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.3",
+    "imagekit": "^6.0.0",
     "inngest": "^3.47.0",
     "lucide-react": "^0.525.0",
     "next": "^16.0.8",
